--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </body>
 <footer>
     <script src="preload.js"></script>
-    <script src="Ejercicio_1.js"></script>
+    <script src="Cronometro.js"></script>
 
     <script src="main.js"></script>
 </footer>
