--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <footer>
     <script src="preload.js"></script>
     <script src="Cronometro.js"></script>
-
+    <script src="Temporizador.js"></script>
     <script src="main.js"></script>
 </footer>
 
