cambio de lugar clases

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 </body>
 <footer>
     <script src="preload.js"></script>
+    <script src="ObjectChronometer.js"></script>
+    <script src="ObjectTemporizer.js"></script>
+    <script src="ObjectReloj.js"></script>
     <script src="Cronometro.js"></script>
     <script src="Temporizador.js"></script>
     <script src="main.js"></script>
