--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 </body>
 <footer>
     <script src="preload.js"></script>
+    <script src="objectTiempo.js"></script>
     <script src="ObjectChronometer.js"></script>
     <script src="ObjectTemporizer.js"></script>
     <script src="ObjectReloj.js"></script>
