Carpeta style y scripts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Reloj multitarea</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <style>
 
     </style>
@@ -13,14 +13,14 @@
 <body>
     <div id="grid">
         <div id="cambio">
-            <button class="boton" id="activar_reloj"><img src="./imagenes/reloj.png" alt="Reloj"> Reloj</button>
+            <button class="boton" id="activar_reloj"><img src="./images/reloj.png" alt="Reloj"> Reloj</button>
             <br>
             <br>
-            <button class="boton" id="activar_cronometro"><img src="./imagenes/crono.png" alt="Cronómetro">
+            <button class="boton" id="activar_cronometro"><img src="./images/crono.png" alt="Cronómetro">
                 Cronómetro</button>
             <br>
             <br>
-            <button class="boton" id="activar_temporizador"><img src="./imagenes/temporizador.png" alt="Temporizador">
+            <button class="boton" id="activar_temporizador"><img src="./images/temporizador.png" alt="Temporizador">
                 Temporizador</button>
             <br>
             <br>
@@ -58,14 +58,14 @@
     </div>
 </body>
 <footer>
-    <script src="preload.js"></script>
-    <script src="objectTiempo.js"></script>
-    <script src="ObjectChronometer.js"></script>
-    <script src="ObjectTemporizer.js"></script>
-    <script src="ObjectReloj.js"></script>
-    <script src="Cronometro.js"></script>
-    <script src="Temporizador.js"></script>
-    <script src="main.js"></script>
+    <script src="./scripts/preload.js"></script>
+    <script src="./scripts/objectTiempo.js"></script>
+    <script src="./scripts/ObjectChronometer.js"></script>
+    <script src="./scripts/ObjectTemporizer.js"></script>
+    <script src="./scripts/ObjectReloj.js"></script>
+    <script src="./scripts/Cronometro.js"></script>
+    <script src="./scripts/Temporizador.js"></script>
+    <script src="./scripts/main.js"></script>
 </footer>
 
 </html>
