actualizacion en ingles

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 </body>
 <footer>
     <script src="./scripts/preload.js"></script>
-    <script src="./scripts/objectTiempo.js"></script>
-    <script src="./scripts/ObjectChronometer.js"></script>
-    <script src="./scripts/ObjectTemporizer.js"></script>
-    <script src="./scripts/ObjectReloj.js"></script>
-    <script src="./scripts/Cronometro.js"></script>
-    <script src="./scripts/Temporizador.js"></script>
+    <script src="./scripts/objectTime.js"></script>
+    <script src="./scripts/objectChronometer.js"></script>
+    <script src="./scripts/objectTemporizer.js"></script>
+    <script src="./scripts/objectClock.js"></script>
+    <script src="./scripts/chronometer.js"></script>
+    <script src="./scripts/temporizer.js"></script>
     <script src="./scripts/main.js"></script>
 </footer>
 
