renombrados archivos objetos y funciones

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="Chronometer" hidden>
                 <div>
                     <p>Cronómetro</p>
-                    <p id="textChronometer">00:00:00:00</p>
+                    <p id="textChronometer">00:00:00:0</p>
                     <button class="start" id="startChronometer">Start</button>
                     <button class="stop" id="flagChronometer" disabled>Flag</button>
                 </div>
@@ -59,12 +59,12 @@
 </body>
 <footer>
     <script src="./scripts/preload.js"></script>
-    <script src="./scripts/objectTime.js"></script>
-    <script src="./scripts/objectChronometer.js"></script>
-    <script src="./scripts/objectTemporizer.js"></script>
-    <script src="./scripts/objectClock.js"></script>
-    <script src="./scripts/chronometer.js"></script>
-    <script src="./scripts/temporizer.js"></script>
+    <script src="./scripts/Time.js"></script>
+    <script src="./scripts/Chronometer.js"></script>
+    <script src="./scripts/Temporizer.js"></script>
+    <script src="./scripts/Clock.js"></script>
+    <script src="./scripts/handler_chronometer.js"></script>
+    <script src="./scripts/handler_temporizer.js"></script>
     <script src="./scripts/main.js"></script>
 </footer>
 
