--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
 </body>
 <footer>
     <script src="./scripts/preload.js"></script>
+    <script src="./scripts/view.js"></script>
     <script src="./scripts/Time.js"></script>
     <script src="./scripts/Chronometer.js"></script>
     <script src="./scripts/Temporizer.js"></script>
     <script src="./scripts/Clock.js"></script>
     <script src="./scripts/handler_chronometer.js"></script>
     <script src="./scripts/handler_temporizer.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/controller.js"></script>
 </footer>
 
 </html>
