--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <script src="./scripts/Chronometer.js"></script>
     <script src="./scripts/Temporizer.js"></script>
     <script src="./scripts/Clock.js"></script>
+    <script src="./scripts/handler_clock.js"></script>
     <script src="./scripts/handler_chronometer.js"></script>
     <script src="./scripts/handler_temporizer.js"></script>
     <script src="./scripts/controller.js"></script>
