--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <footer>
     <script src="./scripts/preload.js"></script>
     <script src="./scripts/view.js"></script>
+
     <script src="./scripts/Time.js"></script>
     <script src="./scripts/Chronometer.js"></script>
     <script src="./scripts/Temporizer.js"></script>
@@ -67,6 +68,7 @@
     <script src="./scripts/handler_clock.js"></script>
     <script src="./scripts/handler_chronometer.js"></script>
     <script src="./scripts/handler_temporizer.js"></script>
+    <script src="./scripts/model.js"></script>
     <script src="./scripts/controller.js"></script>
 </footer>
 
